--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@gluestack-ui/divider": "^0.1.10",
     "@gluestack-ui/icon": "^0.1.26",
     "@gluestack-ui/image": "^0.1.17",
+    "@gluestack-ui/input": "^0.1.38",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/pressable": "^0.1.23",
@@ -36,6 +37,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
@@ -43,7 +45,8 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "zod": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
