--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web": "DARK_MODE=media expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@expo/webpack-config": "^19.0.1",
     "@gluestack-ui/avatar": "^0.1.18",
     "@gluestack-ui/button": "^1.0.14",
@@ -25,34 +25,43 @@
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/pressable": "^0.1.23",
     "@gluestack-ui/toast": "^1.0.9",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.70.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "expo": "^52.0.41",
-    "expo-status-bar": "~2.0.1",
+    "expo": "53.0.22",
+    "expo-font": "~13.3.2",
+    "expo-status-bar": "~2.2.3",
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "^19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
-    "react-native": "0.76.7",
+    "react-native": "0.79.5",
     "react-native-css-interop": "^0.1.22",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "zod": "^4.1.0"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.23.0",
     "@tanstack/eslint-plugin-query": "^5.68.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.1",
@@ -64,7 +73,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.3.3",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.28.0"
   },
   "eslintConfig": {
