--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/pressable": "^0.1.23",
     "@gluestack-ui/toast": "^1.0.9",
+    "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
@@ -37,7 +38,9 @@
     "dayjs": "^1.11.13",
     "expo": "53.0.22",
     "expo-font": "~13.3.2",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
+    "libphonenumber-js": "^1.12.13",
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -45,17 +48,22 @@
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
     "react-native": "0.79.5",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.0",
-    "zustand": "^5.0.8"
+    "zod": "^4.1.1",
+    "zustand": "^5.0.8",
+    "expo-maps": "~0.11.0",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
