--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "expo": "53.0.22",
+    "expo-crypto": "~14.1.5",
     "expo-font": "~13.3.2",
+    "expo-image-picker": "^16.1.4",
     "expo-location": "~18.1.6",
+    "expo-maps": "~0.11.0",
     "expo-status-bar": "~2.2.3",
     "libphonenumber-js": "^1.12.13",
     "lucide-react-native": "^0.485.0",
@@ -51,6 +54,8 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-maps": "1.20.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -60,10 +65,10 @@
     "react-native-vector-icons": "^10.2.0",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^4.1.1",
     "zustand": "^5.0.8",
-    "expo-maps": "~0.11.0",
-    "react-native-maps": "1.20.1"
+    "expo-apple-authentication": "~7.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
