skeleton is broke, checkin updates

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:types": "supabase gen types typescript --project-id qdyrtjzvauhrvyszydnu --schema public > src/types/database.types.ts"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@expo/webpack-config": "^19.0.1",
     "@gluestack-ui/avatar": "^0.1.18",
     "@gluestack-ui/button": "^1.0.14",
@@ -28,7 +28,7 @@
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack-ui/utils": "^3.0.3",
     "@hookform/resolvers": "^5.2.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
@@ -38,48 +38,50 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "expo": "53.0.22",
-    "expo-apple-authentication": "~7.2.4",
-    "expo-crypto": "~14.1.5",
-    "expo-font": "~13.3.2",
-    "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-location": "~18.1.6",
-    "expo-maps": "~0.11.0",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.3",
+    "expo-apple-authentication": "~8.0.7",
+    "expo-crypto": "~15.0.7",
+    "expo-font": "~14.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-location": "~19.0.7",
+    "expo-maps": "~0.12.7",
+    "expo-status-bar": "~3.0.8",
     "libphonenumber-js": "^1.12.13",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.485.0",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.20.1",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zod": "^4.1.1",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.23.0",
     "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/lodash": "^4.17.20",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
@@ -97,7 +99,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "supabase": "^2.39.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3",
+    "typescript": "~5.9.2",
     "typescript-eslint": "^8.28.0"
   },
   "eslintConfig": {
