--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@gluestack-ui/utils": "^3.0.3",
     "@hookform/resolvers": "^5.2.1",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
@@ -38,7 +39,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "expo": "^54.0.3",
+    "expo": "^54.0.8",
     "expo-apple-authentication": "~8.0.7",
     "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.8",
@@ -56,11 +57,14 @@
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-css-interop": "^0.1.22",
+    "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.11",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.20.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
@@ -68,13 +72,13 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zod": "^4.1.1",
-    "zustand": "^5.0.8",
-    "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
