--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "db:types": "supabase gen types typescript --project-id qdyrtjzvauhrvyszydnu --schema public > src/types/database.types.ts"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.13.7",
     "@expo/vector-icons": "^15.0.2",
     "@expo/webpack-config": "^19.0.1",
     "@gluestack-ui/avatar": "^0.1.18",
     "@gluestack-ui/button": "^1.0.14",
+    "@gluestack-ui/core": "^3.0.10",
     "@gluestack-ui/divider": "^0.1.10",
     "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/image": "^0.1.17",
@@ -25,9 +27,11 @@
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/pressable": "^0.1.23",
+    "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack-ui/utils": "^3.0.3",
     "@hookform/resolvers": "^5.2.1",
+    "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.3",
