added google autocomplete library
# Conflicts:
#	.env

--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.11",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-google-places-textinput": "^0.8.0",
     "react-native-maps": "1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-phone-number-input": "^2.1.0",
