--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-google-places-textinput": "^0.8.0",
