--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack-ui/utils": "^3.0.3",
+    "@gorhom/bottom-sheet": "^5.2.6",
     "@hookform/resolvers": "^5.2.1",
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "2.2.0",
