--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-maps": "1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-qrcode-svg": "^6.3.16",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
