--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "dayjs": "^1.11.13",
     "expo": "^54.0.8",
     "expo-apple-authentication": "~8.0.7",
+    "expo-camera": "~17.0.9",
     "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
