--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "social charge",
-    "slug": "social charge",
+    "slug": "social-charge",
     "version": "1.0.0",
     "web": {
       "favicon": "./assets/sc_logo_dark.png"
@@ -21,15 +21,24 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.myexpoapp"
+      "bundleIdentifier": "com.socialcharge.app",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.myexpoapp"
+      "package": "com.socialcharge.app"
     },
-    "newArchEnabled": true
+    "newArchEnabled": true,
+    "extra": {
+      "eas": {
+        "projectId": "d23885a9-5980-4fdb-a5ca-6f7921bc883b"
+      }
+    },
+    "owner": "social-charge"
   }
 }
