--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-community/slider": "^5.1.1",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
@@ -46,16 +46,18 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "expo": "^54.0.8",
+    "expo": "~54.0.26",
     "expo-apple-authentication": "~8.0.7",
     "expo-camera": "~17.0.9",
     "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.19",
+    "expo-dev-launcher": "^6.0.18",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-location": "~19.0.7",
-    "expo-maps": "~0.12.7",
+    "expo-maps": "~0.12.8",
     "expo-status-bar": "~3.0.8",
     "libphonenumber-js": "^1.12.13",
     "lodash": "^4.17.21",
@@ -65,7 +67,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-intersection-observer": "^9.16.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-css-interop": "^0.1.22",
@@ -79,7 +81,7 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-qrcode-svg": "^6.3.16",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
