--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "expo-camera": "~17.0.9",
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "~6.0.19",
-    "expo-dev-launcher": "^6.0.18",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image-picker": "~17.0.8",
@@ -80,6 +79,8 @@
     "react-native-maps": "1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-purchases": "^9.6.9",
+    "react-native-purchases-ui": "^9.6.9",
     "react-native-qrcode-svg": "^6.3.16",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
@@ -94,6 +95,11 @@
     "uuid": "^11.1.0",
     "zod": "^4.1.1",
     "zustand": "^5.0.8"
+  },
+  "overrides": {
+    "react-native-calendars": {
+      "react-native-safe-area-context": "~5.6.0"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
