--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@sentry/react-native": "^7.7.0",
     "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.70.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -70,7 +71,6 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-css-interop": "^0.1.22",
-    "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
