--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "expo-location": "~19.0.7",
     "expo-maps": "~0.12.8",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.16",
     "expo-web-browser": "~15.0.10",
     "libphonenumber-js": "^1.12.13",
     "lodash": "^4.17.21",
